# reason-critic

./: README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: train.sh  train_colab.ipynb
src/reason_critic/: __init__.py  cli.py  critic.py  data_prep.py  pipeline.py  server.py  trainer.py
src/reason_critic/benchmarks/: __init__.py
src/reason_critic/benchmarks/code_correctness/: tasks.json
src/reason_critic/benchmarks/logic_errors/: tasks.json
src/reason_critic/benchmarks/security_issues/: tasks.json
src/reason_critic/benchmarks/style_issues/: tasks.json
tests/: test_critic.py
