[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reason-critic"
version = "0.1.0"
description = "A self-verification model that critiques agent output — it doesn't generate, it flags errors."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FableForge"},
]
dependencies = [
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "datasets>=2.20.0",
    "accelerate>=0.25.0",
    "unsloth>=2024.1",
]
gpu = [
    "bitsandbytes>=0.43.0",
]
dpo = [
    "trl>=0.7.0",
]
all = ["reason-critic[train,gpu,dpo]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
critic = "reason_critic.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"